// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> should render properly for FILTER 1`] = `
.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  background-color: #252525;
  border: 1px solid transparent;
  border-bottom: 1px solid #3b3b3b;
  padding-bottom: 1px;
}

.emotion-4:hover {
  border: 1px solid #808080;
}

.emotion-4:hover svg {
  opacity: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-left: 8px;
}

.emotion-3:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-3 h4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 400;
  padding-left: 4px;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
    onClick={[Function]}
  >
    <button
      aria-label="Expand Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        height={20}
      />
    </button>
    <h4
      className="emotion-2"
    >
      Hi
    </h4>
  </div>
</div>
`;

exports[`<Accordion /> should render properly for PANEL 1`] = `
.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-4:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-4:first-of-type > div {
  border-top: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
}

.emotion-3:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
    onClick={[Function]}
  >
    <button
      aria-label="Expand Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        height={20}
      />
    </button>
    <h4
      className="emotion-2"
    >
      Hi
    </h4>
  </div>
</div>
`;

exports[`<Accordion /> should render properly for PRIMARY 1`] = `
.emotion-4 {
  background-color: #3b3b3b;
  border-radius: 2px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 12px;
}

.emotion-3:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-3 h4 {
  font-weight: 700;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
    onClick={[Function]}
  >
    <button
      aria-label="Expand Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        height={20}
      />
    </button>
    <h4
      className="emotion-2"
    >
      Hi
    </h4>
  </div>
</div>
`;
